--- a/404.html
+++ b/404.html
@@ -74,6 +74,7 @@
   <h1>404 — Page Not Found</h1>
   <p>This page is either being built… or does not exist yet.</p>
 
-  <a href="index.html">Return to Home</a>
+  <a href="nooralhuda.co.uk">Return to Home</a>
 </body>
 </html>
+
